--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "webpack-dev-server-fallback",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "express": "*"
+  }
 }
